# tinytown

./: .dockerignore  .gitignore  CHANGELOG.md  COMPLEXITY.md  Cargo.toml  Dockerfile.agent-worker  Dockerfile.townhall  README.md  docker-compose.yml  issue-37-clone-link  issue-37-link  tinytown.toml
.ai/: cloud-deployment-analysis.md  codex-subagent-design.md  integration-roadmap.md
.github/workflows/: ci.yml  release-please.yml
docker/: agent-worker-entrypoint.sh  townhall-entrypoint.sh
docs/design/: task-backlog-recovery.md
docs/designs/: mission-mode.md  tcp-redis-migration.md
docs/openapi/: townhall-v1.yaml
docs/src/: README.md  SUMMARY.md
docs/src/advanced/: api.md  custom-models.md  redis.md  tinytown-agent-communications.md  townhall-mcp.md  townhall-rest.md  townhall.md
docs/src/advanced/tinytown-agent-communications-skill/: SKILL.md
docs/src/cli/: assign.md  backlog.md  bootstrap.md  close.md  conductor.md  config.md  events.md  history.md  inbox.md  init.md  interrupt.md  kill.md  mission.md  recover.md  restore.md  resume.md  save.md  send.md  spawn.md  start.md  status.md  stop.md  wait.md
docs/src/concepts/: agents.md  channels.md  coordination.md  messages.md  missions.md  overview.md  tasks.md  towns.md
docs/src/gastown/: concepts.md  migration.md  why-tinytown.md
docs/src/getting-started/: first-town.md  installation.md  quickstart.md
docs/src/tutorials/: mission-mode.md  multi-agent.md  pipelines.md  recovery.md
src/: agent.rs  agent_runtime.rs  channel.rs  config.rs  error.rs  events.rs  global_config.rs  keys.rs  lib.rs  main.rs  message.rs  migration.rs  redis_manager.rs  task.rs  town.rs
src/app/: audit.rs  auth.rs  mod.rs  rate_limit.rs  server.rs
src/app/mcp/: mod.rs  prompts.rs  resources.rs  router.rs  tools.rs
src/app/services/: agents.rs  backlog.rs  messages.rs  recovery.rs  tasks.rs
src/mission/: bootstrap.rs  compiler.rs  dispatcher.rs  mod.rs  scheduler.rs  storage.rs  types.rs  watch.rs
tests/: integration_tests.rs  mcp_integration_tests.rs  townhall_integration_tests.rs
