[package]
name = "tinytown"
version = "0.2.0"
edition = "2024"
authors = ["Jeremy Plichta <jeremy.plichta@redis.com>"]
description = "A simple, fast multi-agent orchestration system using Redis for message passing"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeremyplichta/tinytown"
keywords = ["agents", "orchestration", "redis", "multi-agent"]
categories = ["command-line-utilities", "concurrency"]

[dependencies]
# Redis client with Unix socket support
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "1.0.6"
dirs = "6.0.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.19"
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["redis"] }

[[bin]]
name = "tt"
path = "src/main.rs"
